updates from comments + others